--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/OSamuelAlmeida/ChatWebApp#readme",
   "dependencies": {
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "mongoose": "^5.4.2"
   }
 }
